<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_title_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/bill_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/bill_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_details_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/bill_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/bill_description_hint"
        />
    <TextView android:id="@+id/priority_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/bill_priority_label"
        />
    <!--  <Spinner android:id="@+id/priority_spinner"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_toRightOf="@id/priority_label"
          android:background="@android:drawable/btn_dropdown"
          android:spinnerMode="dropdown"
      /> -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_due_by_label"
        />
    <Button android:id="@+id/bill_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
        />
    <CheckBox android:id="@+id/bill_paid"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:text="@string/bill_paid_label"
        />


</LinearLayout>